# gamedev

./: CMakeLists.txt  README.md  build.bat  build_and_run.bat  dist.bat  inno.iss  run.bat
include/: Asteroid.h  Audio.h  AudioData.h  Bullet.h  Constants.h  DebugHUD.h  Engine.h  Explosion.h  Player.h  Text.h  Vector2.h
src/: Asteroid.cpp  Audio.cpp  Bullet.cpp  DebugHUD.cpp  Engine.cpp  Explosion.cpp  Player.cpp  Text.cpp  Vector2.cpp  game.cpp  loop.cpp  loop.h  main.cpp
